# Orca

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  00_PLUGIN_LAUNCH_INDEX.md  00_PROJECT_INDEX.md  01_CODEX_EXECUTION_PROTOCOL.md  02_REPO_BOOTSTRAP.md  03_CORE_TYPES_AND_ALLOCATORS.md  04_CLI_SKELETON.md  05_SESSION_SUPERVISOR.md  06_AUDIT_LOG_AND_REPLAY.md  07_POLICY_ENGINE.md  08_ENV_AND_SECRET_PROTECTION.md  09_FILESYSTEM_GUARD_AND_STAGING.md  10_COMMAND_GUARD_AND_APPROVALS.md  11_MCP_STDIO_PROXY.md  12_NETWORK_EGRESS_GUARD.md  13_REDTEAM_BENCHMARK_SUITE.md  14_LINUX_SANDBOX_BACKEND.md  15_MACOS_BACKEND.md  16_WINDOWS_BACKEND.md  17_ADVANCED_MCP_AND_MANIFESTS.md  18_AGENT_PRESETS_AND_INTEGRATIONS.md  19_INSTALLERS_RELEASE_PIPELINE.md  20_SECURITY_HARDENING_AND_FUZZING.md  21_DOCUMENTATION_AND_DEMO.md  22_V1_STABILIZATION_AND_ACCEPTANCE.md  AEGIS_CLI_PLUGIN_CONTRACT.md  AGENTS.md  ARCHITECTURE_CONTRACTS.md  CANONICAL_IMPLEMENTATION_DECISIONS.md  CHANGELOG.md  CODEX_AGENT_CONTEXT.md  CODEX_MASTER_PROMPT.md  CONTRIBUTING.md  DRONE_WORKSTREAM_GUARDRAILS.md  EdgeRunner_MLX_long_prompt_report.md  FINAL_PASS_REPORT.md  GITHUB_RELEASE_DRAFT.md  (+19 more)
.claude-plugin/: marketplace.json
.pi/: settings.json
.playwright-mcp/: page-2026-05-12T06-04-39-024Z.yml
aegis_plugin_launch_plan_v3/: 00_PLUGIN_LAUNCH_INDEX.md  AEGIS_CLI_PLUGIN_CONTRACT.md  CODEX_PLUGIN_PHASE_PROMPTS.md  P00_CURRENT_BASELINE_AND_SAFEPOINT.md  P01_AEGIS_CLI_PLUGIN_SURFACE.md  P02_AGENT_HOST_INTEGRATION_API.md  P03_CODEX_PLUGIN.md  P04_CLAUDE_CODE_PLUGIN.md  P05_PLUGIN_SECURITY_AND_COMPATIBILITY.md  P06_PLUGIN_DISTRIBUTION_AND_MARKETPLACE.md  P07_PLUGIN_LAUNCH_AND_POSTLAUNCH.md  PLAN_REVIEW_NOTES.md  PLUGIN_SECURITY_MODEL.md  README.md  SEPARATE_WORKSTREAM_GUARDRAILS.md  manifest.json
docs/: README.md  (+24 more)
orca-rs/fuzz/: Cargo.toml
orca-rs/fuzz/fuzz_targets/: ast_matcher_fuzz.rs  fuzz_context.rs  fuzz_evaluate.rs  fuzz_heredoc_extract.rs  fuzz_heredoc_language.rs  fuzz_heredoc_trigger.rs  fuzz_hook_input.rs  fuzz_normalize.rs  fuzz_scan_extractors.rs  fuzz_shell_extract.rs  heredoc_fuzz.rs
(+1938 files in other folders)
